# TFLite-Examples

./: .gitignore  CMakeLists.txt  README.rst  qml.qrc  tflite-examples.pro  translations.qrc
.github/workflows/: apk.yml
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/src/com/github/stemoretti/tflite_examples/: MainActivity.java
qml/: AboutPage.qml  CameraPage.qml  CustomDialog.qml  ImageClassificationCameraPage.qml  ImageClassificationPage.qml  ImageClassificationVideoPage.qml  ImageClassificationView.qml  MainPage.qml  ObjectDetectionCameraPage.qml  ObjectDetectionPage.qml  ObjectDetectionVideoPage.qml  ObjectDetectionView.qml  PoseEstimationCameraPage.qml  PoseEstimationPage.qml  PoseEstimationVideoPage.qml  PoseEstimationView.qml  SettingsPage.qml  VideoFilterBasePage.qml  VideoPage.qml  languages.js  main.qml
qml/common/: App.qml  AppStackPage.qml  AppToolBar.qml  ButtonFlat.qml  ButtonRaised.qml  HorizontalDivider.qml  HorizontalListDivider.qml  LabelBody.qml  LabelBodySecondary.qml  LabelSubheading.qml  LabelTitle.qml  SettingsItem.qml
qml/pages/: AboutPage.qml  FileChooserPage.qml  ImageClassificationPage.qml  ObjectDetectionPage.qml  PoseEstimationPage.qml  SettingsContinentsPage.qml  SettingsCountriesPage.qml  SettingsPage.qml
qml/popups/: BaseModalPopup.qml  ColorSelectionPopup.qml  ListPopup.qml  PopupError.qml  PopupInfo.qml  PopupToast.qml
scripts/: android-build-multi.sh  android-build-single.sh
src/: appdata.cpp  appdata.h  boxesmodel.cpp  boxesmodel.h  iconprovider.cpp  imageclassification.cpp  imageclassification.h  main.cpp  objectdetection.cpp  objectdetection.h  poseestimation.cpp  poseestimation.h  settings.cpp  settings.h  system.cpp  system.h  tflite.cpp  tflite.h  utils.cpp  utils.h  videofilter.cpp  videofilter.h
translations/: tflite-examples_it.ts
